--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "@types/react-dom": "^18.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "^5.0.2",
-    "tailwindcss": "^3.3.2"
+    "react-router-dom": "^6.11.2",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.0.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.8",
